@@ -1,4 +1,5 @@
 1.14 -> 1.15:
+    - jbj: permit popt alias/exec to include content from a file.
     - jbj: permit glob(3) patterns in appName field of popt alias/exec config.
     - jbj: add test cases for bit operations and toggles.
     - jbj: avoid displaying --[no]nofoo with POPT_ARGFLAG_TOGGLE.
